--- a/MvcMovie/MvcMovie/Views/_ViewImports.cshtml
+++ b/MvcMovie/MvcMovie/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using MvcMovie
-@namespace MvcMovie.Pages
+﻿@using MvcMovie
+@using MvcMovie.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
