--- a/MvcMovie/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/MvcMovie/Views/Movies/Index.cshtml
@@ -4,69 +4,99 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<form asp-controller="Movies" asp-action="Index" method="get">
-    <p>
 
-        <select asp-for="MovieGenre" asp-items="Model.Genres">
-            <option value="">All</option>
-        </select>
 
-        Title: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
-    </p>
-</form>
+<body style="background-color: #778899; ">
+    <div class="card text-lg-left">
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Genre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Rating)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Movies)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
+        <div class="card-body">
+            <h1 class="card-title">Index</h1>
+            <p class="card-text"></p>
+            <a asp-action="Create" class="btn btn-primary">Create New</a>
+        </div>
+
+
+
+
+
+
+        <form asp-controller="Movies" asp-action="Index" method="get">
+            <p>
+                <div class="form-row align-items-center" style="margin-left:3px; width:100%;">
+
+
+                    <div class="col-sm-2 my-1">
+                        <select asp-for="MovieGenre" asp-items="Model.Genres" class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <option value="">All</option>
+                        </select>
+                    </div>
+
+                    <div class="col-sm-4 my-1">
+                        <input type="text" asp-for="SearchString" class="form-control" id="inputEmail3" placeholder="Title">
+                    </div>
+
+
+                    <input type="button" class="btn btn-warning" value="Filter" />
+
+                </div>
+
+            </p>
+        </form>
+
+        <table class="table ">
+            <thead class="thead-light">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Movies[0].Title)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Movies[0].Genre)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Movies[0].Price)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Movies[0].Rating)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Movies)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ReleaseDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Genre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Price)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Rating)
+                        </td>
+                        <td>
+
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <a type="button" class="btn btn-light btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                <a type="button" class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                                <a type="button" class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <div class="card-footer">
+        </div>
+    </div>
+</body>
