--- a/MvcMovie/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/MvcMovie/Views/Movies/Index.cshtml
@@ -37,7 +37,7 @@
                     </div>
 
 
-                    <input type="button" class="btn btn-warning" value="Filter" />
+                    <input type="submit" class="btn btn-warning" value="Filter" />
 
                 </div>
 
