--- a/MvcMovie/MvcMovie/wwwroot/css/site.css
+++ b/MvcMovie/MvcMovie/wwwroot/css/site.css
@@ -5,7 +5,10 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  font-size: 18px;
 }
+
+
 
 /* Provide sufficient contrast against white background */
 a {
@@ -22,6 +25,7 @@ a {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+  font-size:16px;
 }
 
 /* Sticky footer styles
@@ -63,9 +67,11 @@ body {
   margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    background-color: white;
+    text-align: right;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
