--- a/MvcMovie/MvcMovie/Views/Movies/Create.cshtml
+++ b/MvcMovie/MvcMovie/Views/Movies/Create.cshtml
@@ -4,50 +4,61 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<body style="background-color: #778899; ">
+    <div  class="card py-sm-5 py-md-1 text-lg-left" >
 
-<h4>Movie</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReleaseDate" class="control-label"></label>
-                <input asp-for="ReleaseDate" class="form-control" />
-                <span asp-validation-for="ReleaseDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
-                <span asp-validation-for="Genre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
-                <span asp-validation-for="Rating" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+        <div class="card-body">
+            <h1 class="card-title">Create</h1>
+            <h4 class="card-text">Movie</h4>
+        </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+       
+        <hr />
+        <div class="">
+            <div >
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-row align-items-center" style="margin-left:12px; width:100%;">
+                        <div class="form-group col-sm-4 my-2">
+                            <input type="text" asp-for="Title" class="form-control " id="Title" placeholder="Title">
+                            <span asp-validation-for="Title" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-sm-2 my-2">
+                            <input type="text" asp-for="Rating" class="form-control" id="Rating" placeholder="Rating" />
+                            <span asp-validation-for="Rating" class="text-danger"></span>
+                        </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+                    </div>
+                    
+                    <div class="form-row align-items-center" style="margin-left:12px; width:100%;">
+                        <div class="form-group col-sm-3 my-2">
+                            <input asp-for="Price" class="form-control" id="Price" placeholder="Price" />
+                            <span asp-validation-for="Price" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-sm-2 my-2">
+                            <input type="text" asp-for="Genre" class="form-control" id="Genre" placeholder="Genre">
+                            <span asp-validation-for="Genre" class="text-danger"></span>
+                        </div>
+
+                    </div>
+                    <div class="form-group col-sm-3 my-1 " style="margin-left:3px; width:100%;">
+                        <label asp-for="ReleaseDate" class="control-label" style="color:grey" ></label>
+                        <input asp-for="ReleaseDate" class="form-control" style="color:grey" />
+                        <span asp-validation-for="ReleaseDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-sm-3 my-4"style="margin-left:3px; width:100%;">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="form-group col-sm-3 my-1">
+            <a asp-action="Index">Back to List</a>
+        </div>
+        </div>
+    </body>
+
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
