--- a/MvcMovie/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/MvcMovie/Views/Home/Index.cshtml
@@ -2,7 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<body style="background-color: #778899; ">
+    <div class="jumbotron jumbotron-fluid text-center" style="background-color: #4863A0; color:white ; margin-top:4px ">
+        <div class="container">
+            <h1 class="display-4">Welcome</h1>
+            <p>Learn about <a href="https://docs.microsoft.com/aspnet/core" style="color: #CFECEC ">building Web apps with ASP.NET Core</a>.</p>
+        </div>
+    </div>
+    </body>
